<resources>
    <string name="app_name">Dhamaka</string>
    <string name="powered_by_invariant_telecom">Powered by - Invariant Telecom</string>
    <string name="effortless_purchase">Effortless Purchase</string>
    <string name="intro_screen_one_description">Buy any product from any place, at any time, very easily with Dhamaka</string>
    <string name="exclusive_products">Exclusive Products</string>
    <string name="intro_screen_two_description">Dhamaka with trendy products for the highest customer service</string>
    <string name="smooth_transaction">Smooth Transaction</string>
    <string name="intro_screen_three_description">Transaction process is very easy as anyone can pay easily</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="toolbar_logo">Toolbar Logo</string>
    <string name="all_products">ALL PRODUCTS</string>
    <string name="dollar">$</string>
    <string name="space">\u0020</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity:</string>
    <string name="color">Color:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting
        industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen
        book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="product_description">Product Description</string>
    <string name="out_of_5">Out of 5</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ratings">Ratings</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="do_you_have_a_coupon_code">Do you have a coupon code?</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="enter_your_coupon">Enter your coupon</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="shoppint_cart">Shopping Cart</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
</resources>
