<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ShoppingCartActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.invariant.dhamaka.viewmodel.ShoppingCartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cartRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/list_item_cart"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/couponTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/do_you_have_a_coupon_code"
                    android:fontFamily="@font/rubik_regular"
                    android:textSize="14sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintTop_toBottomOf="@id/cartRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/couponEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/enter_your_coupon"
                    android:fontFamily="@font/rubik_regular"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:background="@drawable/bg_dark_border"
                    app:layout_constraintEnd_toStartOf="@id/applyCouponTextView"
                    app:layout_constraintTop_toBottomOf="@id/couponTitleTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/applyCouponTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:padding="8dp"
                    android:text="@string/apply_coupon"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/bg_half_round_dark"
                    app:layout_constraintTop_toTopOf="@id/couponEditText"
                    app:layout_constraintBottom_toBottomOf="@id/couponEditText"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/separator1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorSeparator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/couponEditText" />

                <TextView
                    android:id="@+id/subtotalTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/subtotal"
                    app:layout_constraintTop_toBottomOf="@id/separator1"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/subtotalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:text="$555.00"
                    app:layout_constraintTop_toBottomOf="@id/separator1"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/separator2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSeparator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subtotalTitleTextView" />

                <TextView
                    android:id="@+id/discountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/discount"
                    app:layout_constraintTop_toBottomOf="@id/separator2"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/discountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:text="$5.00"
                    app:layout_constraintTop_toBottomOf="@id/separator2"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/separator3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSeparator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/discountTextView" />

                <TextView
                    android:id="@+id/totalTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/total"
                    app:layout_constraintTop_toBottomOf="@id/separator3"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/totalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:text="$550.00"
                    app:layout_constraintTop_toBottomOf="@id/separator3"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/separator4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSeparator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/totalTextView" />

                <Button
                    android:id="@+id/proceedToCheckoutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/proceed_to_checkout"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toBottomOf="@id/separator4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.progress ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
